--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,7 +68,11 @@
     <string name="delete_dialog_message">Are you sure you want to delete this product?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="title_product_details">PRODUCT DETAILS</string>
+    <string name="lbl_product_description">Product Description</string>
+    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>
 
+    <!--    In (fragment_base)-->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
